// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:768px) {
  .emotion-1 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  max-width: 768px;
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:767px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-4 emotion-2 emotion-6 bb-Box bb-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 test bb-Box bb-Container bb-PageContent"
  >
    hello world
  </div>
</div>
`;

exports[`overrides styles.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:768px) {
  .emotion-1 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  max-width: 768px;
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:767px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-2 emotion-3 bb-Box bb-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Container bb-PageContent"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:768px) {
  .emotion-1 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  max-width: 768px;
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:767px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

<div
  class="emotion-4 emotion-2 emotion-3 bb-Box bb-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Container bb-PageContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:768px) {
  .emotion-1 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  max-width: 768px;
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:767px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-4 emotion-2 emotion-6 bb-Box bb-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Container bb-PageContent"
  >
    Hello world
  </div>
</div>
`;

exports[`theming styles.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:768px) {
  .emotion-1 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  max-width: 768px;
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:767px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-2 emotion-3 bb-Box bb-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Container bb-PageContent"
  >
    hello world
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:768px) {
  .emotion-1 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-1 {
  max-width: 768px;
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:767px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-4 emotion-2 emotion-3 bb-Box bb-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Container bb-PageContent"
  >
    hello world
  </div>
</div>
`;
